--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
+    "headers": [
         {
-          "key": "Content-Type",
-          "value": "application/pdf"
+            "source": "/(.*\\.pdf)",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "application/pdf"
+                }
+            ]
         }
-      ]
-    }
-  ]
+    ]
 }
